syntax = "proto3";
package com.example.grpc;

message NumberRequest{

  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse{
  int32 value = 1;
  string message = 2;
}
service GreetingService{
  rpc greeting(NumberRequest) returns (stream NumberResponse);
}